refactor lib with target 11 and test with target 16